--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style_table.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <title>Table</title>
 </head>
+
 <body>
     <!--<button id="btn">boton</button>
     <div class="box-title">
@@ -18,27 +25,28 @@
 
     </div>
 -->
-<!--Con el archivo .js vamos a agregar al HTML, solo los usuarios del array que en su correo aparezca la terminacion @academlo.com
+    <!--Con el archivo .js vamos a agregar al HTML, solo los usuarios del array que en su correo aparezca la terminacion @academlo.com
 - Utilizar las herramientas createElementHTML y appendchild
 -->
 
 
 
-<table id="users-table">
-    <tr>
-        <td>Nombre</td>
-        <td>Email</td>
-        <td>Edad</td>
-        <td>Sexo</td>
-        <td>Redes Sociales</td>
-    </tr>
-    <tbody>
-    </tbody>
-</table>
+    <table id="users-table" class="table">
+        <tr class="header_table">
+            <td>Nombre</td>
+            <td>Email</td>
+            <td>Edad</td>
+            <td>Sexo</td>
+            <td>Redes Sociales</td>
+        </tr>
+        <tbody class="body_table">
+        </tbody>
+    </table>
 
 
-    <!--<script src="./dom.js"></script>-->
-    <!--<script src="./functions.js"></script>-->
+    <script src="./dom.js"></script>
+    <script src="./functions.js"></script>
     <script src="./table.js"></script>
 </body>
+
 </html>
